--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
     </nav>
     <div class="container-fluid background-primary-color py-5">
       <div class="row">
-        <div class="col-md-4 profile-image-container mt-4 text-center">
+        <div class="col-md-4 mt-4 text-center">
           <img src="img/profile.jpeg" class="img-fluid profile-image" />
         </div>
-        <div class="col-md-8 profile-image-container mt-4">
+        <div class="col-md-8 mt-4">
           <div class="row">
             <div class="col-12 text-center">
               <h1><strong>MATEO ASENCIO</strong></h1>
@@ -58,7 +58,7 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-sm-12 profile-image-container mt-4 pt-4 px-4">
+            <div class="col-sm-12 mt-4 pt-4 px-4">
               Hola, mi nombre es Mateo Asencio y me desempeño como desarrollador
               de software full stack. Actualmente trabajo en la empresa Kdos
               SRL, tanto en el sistema ETNA de gestion educativa, como en otro
@@ -74,39 +74,41 @@
         </div>
       </div>
     </div>
-    <footer class="footer pt-2">
+    <footer class="footer pt-4">
       <div class="containter">
-        <div class="row text-center">
+        <div class="row text-center w-100">
           <div class="col-md-4">
-            <i class="fa-brands fa-whatsapp footer-icon"></i
-            ><a
-              class="footer-a"
+            <a
+              class="footer-a whatsapp-color"
               href="https://wa.me/543564584838"
               target="_blank"
             >
+              <i class="fa-brands fa-whatsapp footer-icon whatsapp-color"></i>
               <p>3564584838</p></a
             >
           </div>
           <div class="col-md-4">
-            <i class="fa-brands fa-instagram footer-icon"></i>
             <a
-              class="footer-a"
+              class="footer-a instagram-color"
               href="https://www.instagram.com/asenciomateosoftware?igsh=MWZnZ3Q3ajNnZWxkcA%3D%3D&utm_source=qr"
               target="_blank"
-              ><p>asenciomateosoftware</p></a
+            >
+              <i class="fa-brands fa-instagram footer-icon instagram-color"></i>
+              <p>asenciomateosoftware</p></a
             >
           </div>
           <div class="col-md-4">
-            <i class="fas fa-envelope footer-icon"></i>
             <a
-              class="footer-a"
+              class="footer-a gmail-color"
               href="mailto:mateoasencio99@gmail.com"
               target="_blank"
             >
+              <i class="fas fa-envelope footer-icon gmail-color"></i>
               <p>mateoasencio99@gmail.com</p></a
             >
           </div>
         </div>
+        <hr class="m-0" />
         <div class="text-center p-3">© 2024 Copyright: Mateo Asencio</div>
       </div>
     </footer>
