--- a/html/experiencia.html
+++ b/html/experiencia.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mateo Asencio</title>
     <link rel="stylesheet" href="../css/styles.css" />
-    <link rel="stylesheet" href="../assets/css/bootstrap/bootstrap.min.css" />
+    <link rel="stylesheet" href="../assets/bootstrap/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="../assets/fontawesome/css/all.min.css" />
   </head>
   <body>
     <nav class="navbar navbar-dark shadow-sm navbar-expand-md navbar-light">
@@ -38,18 +39,118 @@
         </div>
       </div>
     </nav>
-    <div class="container-fluid background-primary-color py-5">
+    <div class="container-fluid background-primary-color pb-5 pt-3">
       <div class="row">
         <div class="col-12 text-center">
           <h1><strong>EXPERIENCIA</strong></h1>
         </div>
       </div>
+      <hr />
+      <div class="row m-1 mb-4 experience-row">
+        <div class="col-md-3 my-4 text-center">
+          <img
+            src="../img/asenciomateosoftware-logo.jpeg"
+            class="img-fluid experience-image"
+          />
+        </div>
+        <div class="col-md-9 my-4 text-center">
+          <h3>ASENCIOMATEOSOFTWARE</h3>
+          <h6>ENERO 2024 - ACTUALIDAD</h6>
+          <p>
+            Trabajando de forma independiente, me encargo de gestion,
+            mantenimiento y mejoras del sistema web de la firma de martilleros
+            públicos PaneroSclerandi. Este consta de una parte de presentación
+            accesible para todos, una parte de remates virtuales, accesible solo
+            para usuarios registrados y habilitados y una parte de
+            configuraciones accesible solo para los martilleros.
+          </p>
+          <p>
+            Tecnologias usadas: Laravel PHP, MySQL, HTML, CSS, Javascript,
+            JQuery, entre otras
+          </p>
+        </div>
+      </div>
+      <div class="row m-1 mb-4 experience-row">
+        <div class="col-md-3 my-4 text-center">
+          <img src="../img/etna-logo.jpeg" class="img-fluid experience-image" />
+        </div>
+        <div class="col-md-9 my-4 text-center">
+          <h3>ETNA EDUCACIÓN</h3>
+          <h6>JUNIO 2023 - ACTUALIDAD</h6>
+          <p>
+            Trabajando a jornada completa como desarrollador full stack en
+            sistema muy completo de gestión academica y facturación. Junto con
+            el equipo, realizamos mantenimiento y mejoras constantes a este gran
+            producto digital.
+          </p>
+          <p>
+            Tecnologias usadas: C#, .NET, Entity Framework, Javascript, Angular,
+            JQuery, entre muchas otras
+          </p>
+        </div>
+      </div>
+      <div class="row m-1 experience-row">
+        <div class="col-md-3 my-4 text-center">
+          <img
+            src="../img/ingertec-logo.jpeg"
+            class="img-fluid experience-image"
+          />
+        </div>
+        <div class="col-md-9 my-4 text-center">
+          <h3>INGERTEC ARGENTINA</h3>
+          <h6>AGOSTO 2022 - JUNIO 2023</h6>
+          <p>
+            Trabajando a jornada completa como desarrollador full stack en
+            sistema muy completo de gestión de supermercados. Junto con el
+            equipo, realizaba mantenimiento y mejoras constantes a este gran
+            producto digital.
+          </p>
+          <p>
+            Tecnologias usadas: C#, .NET, Entity Framework, Javascript, JQuery,
+            entre muchas otras
+          </p>
+        </div>
+      </div>
     </div>
-    <footer class="footer">
+    <footer class="footer pt-4">
       <div class="containter">
+        <div class="row text-center w-100">
+          <div class="col-md-4">
+            <a
+              class="footer-a whatsapp-color"
+              href="https://wa.me/543564584838"
+              target="_blank"
+            >
+              <i class="fa-brands fa-whatsapp footer-icon whatsapp-color"></i>
+              <p>3564584838</p></a
+            >
+          </div>
+          <div class="col-md-4">
+            <a
+              class="footer-a instagram-color"
+              href="https://www.instagram.com/asenciomateosoftware?igsh=MWZnZ3Q3ajNnZWxkcA%3D%3D&utm_source=qr"
+              target="_blank"
+            >
+              <i class="fa-brands fa-instagram footer-icon instagram-color"></i>
+              <p>asenciomateosoftware</p></a
+            >
+          </div>
+          <div class="col-md-4">
+            <a
+              class="footer-a gmail-color"
+              href="mailto:mateoasencio99@gmail.com"
+              target="_blank"
+            >
+              <i class="fas fa-envelope footer-icon gmail-color"></i>
+              <p>mateoasencio99@gmail.com</p></a
+            >
+          </div>
+        </div>
+        <hr class="m-0" />
         <div class="text-center p-3">© 2024 Copyright: Mateo Asencio</div>
       </div>
     </footer>
   </body>
-  <script src="../assets/js/bootstrap/bootstrap.bundle.min.js"></script>
+  <script src="../assets/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="../assets/fontawesome/js/all.js"></script>
 </html>
