estudios y proyectos personales. Cambios varios

--- a/html/experiencia.html
+++ b/html/experiencia.html
@@ -46,11 +46,11 @@
         </div>
       </div>
       <hr />
-      <div class="row m-1 mb-4 experience-row">
+      <div class="row m-1 mb-4 card-shadow">
         <div class="col-md-3 my-4 text-center">
           <img
             src="../img/asenciomateosoftware-logo.jpeg"
-            class="img-fluid experience-image"
+            class="img-fluid card-image"
           />
         </div>
         <div class="col-md-9 my-4 text-center">
@@ -62,7 +62,13 @@
             públicos PaneroSclerandi. Este consta de una parte de presentación
             accesible para todos, una parte de remates virtuales, accesible solo
             para usuarios registrados y habilitados y una parte de
-            configuraciones accesible solo para los martilleros.
+            configuraciones accesible solo para los martilleros. <br />Mas
+            información en
+            <a
+              href="https://www.instagram.com/asenciomateosoftware?igsh=MWZnZ3Q3ajNnZWxkcA%3D%3D&utm_source=qr"
+              target="_blank"
+              >asenciomateosoftware</a
+            >
           </p>
           <p>
             Tecnologias usadas: Laravel PHP, MySQL, HTML, CSS, Javascript,
@@ -70,9 +76,9 @@
           </p>
         </div>
       </div>
-      <div class="row m-1 mb-4 experience-row">
+      <div class="row m-1 mb-4 card-shadow">
         <div class="col-md-3 my-4 text-center">
-          <img src="../img/etna-logo.jpeg" class="img-fluid experience-image" />
+          <img src="../img/etna-logo.jpeg" class="img-fluid card-image" />
         </div>
         <div class="col-md-9 my-4 text-center">
           <h3>ETNA EDUCACIÓN</h3>
@@ -89,11 +95,11 @@
           </p>
         </div>
       </div>
-      <div class="row m-1 experience-row">
+      <div class="row m-1 card-shadow">
         <div class="col-md-3 my-4 text-center">
           <img
             src="../img/ingertec-logo.jpeg"
-            class="img-fluid experience-image"
+            class="img-fluid card-image"
           />
         </div>
         <div class="col-md-9 my-4 text-center">
