--- a/index.html
+++ b/index.html
@@ -59,17 +59,38 @@
           </div>
           <div class="row">
             <div class="col-sm-12 mt-4 pt-4 px-4">
-              Hola, mi nombre es Mateo Asencio y me desempeño como desarrollador
-              de software full stack. Actualmente trabajo en la empresa Kdos
-              SRL, tanto en el sistema ETNA de gestion educativa, como en otro
-              proyectos. Por otra parte trabajo de manera independiente desde
-              <a
-                href="https://www.instagram.com/asenciomateosoftware?igsh=MWZnZ3Q3ajNnZWxkcA%3D%3D&utm_source=qr"
-                target="_blank"
-                >asenciomateosoftware</a
-              >, teniendo como principal cliente la firma de martilleros
-              públicos PaneroSclerandi de mucha trayectoria y experiencia.
+              <p>
+                Hola, mi nombre es Mateo Asencio y me desempeño como
+                desarrollador de software full stack. Actualmente trabajo en la
+                empresa Kdos SRL, tanto en el sistema ETNA de gestion educativa,
+                como en otro proyectos. Por otra parte trabajo de manera
+                independiente desde
+                <a
+                  href="https://www.instagram.com/asenciomateosoftware?igsh=MWZnZ3Q3ajNnZWxkcA%3D%3D&utm_source=qr"
+                  target="_blank"
+                  >asenciomateosoftware</a
+                >, teniendo como principal cliente la firma de martilleros
+                públicos PaneroSclerandi de mucha trayectoria y experiencia.
+              </p>
             </div>
+            <a
+              class="btn btn-primary mt-2"
+              href="https://www.docdroid.net/DM9ytCk/english-cv-mateo-asencio-pdf"
+              >VER Y DESCARGAR CV</a
+            >
+            <a class="btn btn-success mt-2" href="https://wa.me/543564584838"
+              >CONTACTAR POR WHATSAPP</a
+            >
+            <a
+              class="btn btn-instagram mt-2"
+              href="https://www.instagram.com/asenciomateosoftware?igsh=MWZnZ3Q3ajNnZWxkcA%3D%3D&utm_source=q"
+              >CONTACTAR POR INSTAGRAM</a
+            >
+            <a
+              class="btn btn-gmail mt-2"
+              href="mailto:mateoasencio99@gmail.com"
+              >CONTACTAR POR EMAIL</a
+            >
           </div>
         </div>
       </div>
