--- a/html/conocimientos.html
+++ b/html/conocimientos.html
@@ -122,7 +122,7 @@
         <div class="col-md-6">
           <div class="mb-4">
             <div class="d-flex justify-content-between">
-              <h5 class="font-weight-bold">Git</h5>
+              <h5 class="font-weight-bold">GIT</h5>
             </div>
             <div class="progress">
               <div
