--- a/html/estudios.html
+++ b/html/estudios.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mateo Asencio</title>
     <link rel="stylesheet" href="../css/styles.css" />
-    <link rel="stylesheet" href="../assets/css/bootstrap/bootstrap.min.css" />
+    <link rel="stylesheet" href="../assets/bootstrap/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="../assets/fontawesome/css/all.min.css" />
   </head>
   <body>
     <nav class="navbar navbar-dark shadow-sm navbar-expand-md navbar-light">
@@ -38,18 +39,83 @@
         </div>
       </div>
     </nav>
-    <div class="container-fluid background-primary-color py-5">
+    <div class="container-fluid background-primary-color pb-5 pt-3">
       <div class="row">
         <div class="col-12 text-center">
           <h1><strong>ESTUDIOS</strong></h1>
         </div>
       </div>
+      <hr />
+      <div class="row m-1 mb-4 card-shadow">
+        <div class="col-md-3 my-4 text-center">
+          <img
+            src="../img/utn-logo.jpeg"
+            class="img-fluid card-image"
+          />
+        </div>
+        <div class="col-md-9 my-4 text-center">
+          <h3>UTN San Francisco</h3>
+          <h6>MARZO 2021 - ACTUALIDAD</h6>
+          <p>
+            Estudiando la carrera de grado de ingenieria en sistemas de información.
+          </p>
+        </div>
+      </div>
+      <div class="row m-1 mb-4 card-shadow">
+        <div class="col-md-3 my-4 text-center">
+          <img
+            src="../img/openbootcamp-logo.jpg"
+            class="img-fluid card-image"
+          />
+        </div>
+        <div class="col-md-9 my-4 text-center">
+          <h3>Open Bootcamp</h3>
+          <h6>ENERO 2022 - JUNIO 2022</h6>
+          <p>
+            Cursos completados de HTML, CSS, Javascript, C#, .NET, GIT, SQL, ReactJS, entre otros.
+          </p>
+        </div>
+      </div>
     </div>
-    <footer class="footer">
+    <footer class="footer pt-4">
       <div class="containter">
+        <div class="row text-center w-100">
+          <div class="col-md-4">
+            <a
+              class="footer-a whatsapp-color"
+              href="https://wa.me/543564584838"
+              target="_blank"
+            >
+              <i class="fa-brands fa-whatsapp footer-icon whatsapp-color"></i>
+              <p>3564584838</p></a
+            >
+          </div>
+          <div class="col-md-4">
+            <a
+              class="footer-a instagram-color"
+              href="https://www.instagram.com/asenciomateosoftware?igsh=MWZnZ3Q3ajNnZWxkcA%3D%3D&utm_source=qr"
+              target="_blank"
+            >
+              <i class="fa-brands fa-instagram footer-icon instagram-color"></i>
+              <p>asenciomateosoftware</p></a
+            >
+          </div>
+          <div class="col-md-4">
+            <a
+              class="footer-a gmail-color"
+              href="mailto:mateoasencio99@gmail.com"
+              target="_blank"
+            >
+              <i class="fas fa-envelope footer-icon gmail-color"></i>
+              <p>mateoasencio99@gmail.com</p></a
+            >
+          </div>
+        </div>
+        <hr class="m-0" />
         <div class="text-center p-3">© 2024 Copyright: Mateo Asencio</div>
       </div>
     </footer>
   </body>
-  <script src="../assets/js/bootstrap/bootstrap.bundle.min.js"></script>
+  <script src="../assets/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="../assets/fontawesome/js/all.js"></script>
 </html>
