--- a/html/proyectos.html
+++ b/html/proyectos.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mateo Asencio</title>
     <link rel="stylesheet" href="../css/styles.css" />
-    <link rel="stylesheet" href="../assets/css/bootstrap/bootstrap.min.css" />
+    <link rel="stylesheet" href="../assets/bootstrap/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="../assets/fontawesome/css/all.min.css" />
   </head>
   <body>
     <nav class="navbar navbar-dark shadow-sm navbar-expand-md navbar-light">
@@ -38,18 +39,123 @@
         </div>
       </div>
     </nav>
-    <div class="container-fluid background-primary-color py-5">
+    <div class="container-fluid background-primary-color pb-5 pt-3">
       <div class="row">
         <div class="col-12 text-center">
-          <h1><strong>PROYECTOS</strong></h1>
+          <h1><strong>PROYECTOS PERSONALES</strong></h1>
+        </div>
+      </div>
+      <hr />
+      <div class="row m-1">
+        <div class="col-md-4 text-center my-2">
+          <div class="p-2 card-shadow">
+            <h3>HTML / CSS / JS</h3>
+            <a
+              href="https://mateoasencio99.github.io/HECHOPORMI/"
+              target="_blank"
+              ><h5>Ir al sitio</h5></a
+            >
+            <img src="../img/hechopormi.jpg" class="img-fluid" />
+          </div>
+        </div>
+        <div class="col-md-4 text-center my-2">
+          <div class="p-2 card-shadow">
+            <h3>HTML / CSS / JS</h3>
+            <a
+              href="https://mateoasencio99.github.io/TestWeRemote/"
+              target="_blank"
+              ><h5>Ir al sitio</h5></a
+            >
+            <img src="../img/testweremote.jpg" class="img-fluid" />
+          </div>
+        </div>
+        <div class="col-md-4 text-center my-2">
+          <div class="p-2 card-shadow">
+            <h3>HTML / CSS / JS</h3>
+            <a
+              href="https://mateoasencio99.github.io/Calculator/"
+              target="_blank"
+              ><h5>Ir al sitio</h5></a
+            >
+            <img src="../img/calculadora.jpg" class="img-fluid" />
+          </div>
+        </div>
+      </div>
+      <div class="row m-1">
+        <div class="col-md-4 text-center my-2">
+          <div class="p-2 card-shadow">
+            <h3>ReactJS</h3>
+            <a
+              href="https://asencio-store.netlify.app/"
+              target="_blank"
+              ><h5>Ir al sitio</h5></a
+            >
+            <img src="../img/asencio-store.jpg" class="img-fluid" />
+          </div>
+        </div>
+        <div class="col-md-4 text-center my-2">
+          <div class="p-2 card-shadow">
+            <h3>ReactJS</h3>
+            <a
+              href="https://asenciofood.netlify.app/"
+              target="_blank"
+              ><h5>Ir al sitio</h5></a
+            >
+            <img src="../img/food.jpg" class="img-fluid" />
+          </div>
+        </div>
+        <div class="col-md-4 text-center my-2">
+          <div class="p-2 card-shadow">
+            <h3>ReactJS / Firebase</h3>
+            <a
+              href="https://asencio-ecommerce.netlify.app/"
+              target="_blank"
+              ><h5>Ir al sitio</h5></a
+            >
+            <img src="../img/ecommerce.jpg" class="img-fluid" />
+          </div>
         </div>
       </div>
     </div>
-    <footer class="footer">
+    <footer class="footer pt-4">
       <div class="containter">
+        <div class="row text-center w-100">
+          <div class="col-md-4">
+            <a
+              class="footer-a whatsapp-color"
+              href="https://wa.me/543564584838"
+              target="_blank"
+            >
+              <i class="fa-brands fa-whatsapp footer-icon whatsapp-color"></i>
+              <p>3564584838</p></a
+            >
+          </div>
+          <div class="col-md-4">
+            <a
+              class="footer-a instagram-color"
+              href="https://www.instagram.com/asenciomateosoftware?igsh=MWZnZ3Q3ajNnZWxkcA%3D%3D&utm_source=qr"
+              target="_blank"
+            >
+              <i class="fa-brands fa-instagram footer-icon instagram-color"></i>
+              <p>asenciomateosoftware</p></a
+            >
+          </div>
+          <div class="col-md-4">
+            <a
+              class="footer-a gmail-color"
+              href="mailto:mateoasencio99@gmail.com"
+              target="_blank"
+            >
+              <i class="fas fa-envelope footer-icon gmail-color"></i>
+              <p>mateoasencio99@gmail.com</p></a
+            >
+          </div>
+        </div>
+        <hr class="m-0" />
         <div class="text-center p-3">© 2024 Copyright: Mateo Asencio</div>
       </div>
     </footer>
   </body>
-  <script src="../assets/js/bootstrap/bootstrap.bundle.min.js"></script>
+  <script src="../assets/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="../assets/fontawesome/js/all.js"></script>
 </html>
