--- a/html/contacto.html
+++ b/html/contacto.html
@@ -45,6 +45,103 @@
           <h1><strong>CONTACTO</strong></h1>
         </div>
       </div>
+      <div class="row p-2">
+        <div class="col-md-6 p-2 text-center">
+          <div class="contact-form p-2">
+            <h3>Teléfono y redes</h3>
+            <a
+              class="footer-a whatsapp-color"
+              href="https://wa.me/543564584838"
+              target="_blank"
+            >
+              <i class="fa-brands fa-whatsapp footer-icon whatsapp-color"></i>
+              <p>3564584838</p></a
+            >
+            <a class="btn btn-whatsapp w-100 mb-3" href="https://wa.me/543564584838"
+              >CONTACTAR POR WHATSAPP</a
+            >
+            <a
+              class="footer-a instagram-color"
+              href="https://www.instagram.com/asenciomateosoftware?igsh=MWZnZ3Q3ajNnZWxkcA%3D%3D&utm_source=qr"
+              target="_blank"
+            >
+              <i class="fa-brands fa-instagram footer-icon instagram-color"></i>
+              <p>asenciomateosoftware</p></a
+            >
+            <a
+              class="btn btn-instagram w-100 mb-3"
+              href="https://www.instagram.com/asenciomateosoftware?igsh=MWZnZ3Q3ajNnZWxkcA%3D%3D&utm_source=q"
+              >CONTACTAR POR INSTAGRAM</a
+            >
+            <a
+              class="footer-a gmail-color"
+              href="mailto:mateoasencio99@gmail.com"
+              target="_blank"
+            >
+              <i class="fas fa-envelope footer-icon gmail-color"></i>
+              <p>mateoasencio99@gmail.com</p></a
+            >
+            <a class="btn btn-gmail w-100 mb-3" href="mailto:mateoasencio99@gmail.com"
+              >CONTACTAR POR EMAIL</a
+            >
+          </div>
+        </div>
+        <div class="col-md-6 p-2">
+          <div class="contact-form p-2">
+            <h3 class="text-center">Consulta</h3>
+            <form
+              action="//formspree.io/f/mnqwkbkq"
+              role="form"
+              method="POST"
+              autocomplete="off"
+            >
+              <div class="form-group mt-2">
+                <label for="name"> Nombre y apellido</label>
+                <input
+                  type="text"
+                  name="name"
+                  class="form-control form-input"
+                  required
+                />
+              </div>
+              <div class="form-group mt-2">
+                <label for="email"> Email</label>
+                <input
+                  type="email"
+                  name="email"
+                  class="form-control form-input"
+                  required
+                />
+              </div>
+              <div class="form-group">
+                <label for="subject"> Asunto</label>
+                <input
+                  type="subject"
+                  name="subject"
+                  class="form-control form-input"
+                  required
+                />
+              </div>
+              <div class="form-group">
+                <label for="message"> Mensaje</label>
+                <textarea
+                  id="message"
+                  name="message"
+                  class="form-control resize-none"
+                  rows="4"
+                  required
+                ></textarea>
+              </div>
+              <div>
+                <button type="submit" class="btn btn-primary mt-2">
+                  Enviar
+                </button>
+                <input type="hidden" name="_subject" value="New submission!" />
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
       <hr />
     </div>
     <footer class="footer pt-4">
