--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
     </nav>
     <div class="container-fluid background-primary-color py-5">
       <div class="row">
-        <div class="col-md-4 mt-4 text-center">
+        <div class="col-md-4 text-center">
           <img src="img/profile.jpeg" class="img-fluid profile-image" />
         </div>
-        <div class="col-md-8 mt-4">
+        <div class="col-md-8">
           <div class="row">
             <div class="col-12 text-center">
               <h1><strong>MATEO ASENCIO</strong></h1>
@@ -57,8 +57,8 @@
               <h2>DESARROLLADOR DE SOFTWARE FULL STACK</h2>
             </div>
           </div>
-          <div class="row">
-            <div class="col-sm-12 mt-4 pt-4 px-4">
+          <div class="row m-2">
+            <div class="col-sm-12 px-4">
               <p>
                 Hola, mi nombre es Mateo Asencio y me desempeño como
                 desarrollador de software full stack. Actualmente trabajo en la
@@ -74,11 +74,11 @@
               </p>
             </div>
             <a
-              class="btn btn-primary mt-2"
+              class="btn btn-linkedin mt-2"
               href="https://www.docdroid.net/DM9ytCk/english-cv-mateo-asencio-pdf"
               >VER Y DESCARGAR CV</a
             >
-            <a class="btn btn-success mt-2" href="https://wa.me/543564584838"
+            <a class="btn btn-whatsapp mt-2" href="https://wa.me/543564584838"
               >CONTACTAR POR WHATSAPP</a
             >
             <a
@@ -90,6 +90,11 @@
               class="btn btn-gmail mt-2"
               href="mailto:mateoasencio99@gmail.com"
               >CONTACTAR POR EMAIL</a
+            >
+            <a
+              class="btn btn-linkedin mt-2"
+              href="https://www.linkedin.com/in/mateo-asencio-7ba700213/"
+              >CONTACTAR POR LINKEDIN</a
             >
           </div>
         </div>
