--- a/html/contacto.html
+++ b/html/contacto.html
@@ -57,7 +57,9 @@
               <i class="fa-brands fa-whatsapp footer-icon whatsapp-color"></i>
               <p>3564584838</p></a
             >
-            <a class="btn btn-whatsapp w-100 mb-3" href="https://wa.me/543564584838"
+            <a
+              class="btn btn-whatsapp w-100 mb-3"
+              href="https://wa.me/543564584838"
               >CONTACTAR POR WHATSAPP</a
             >
             <a
@@ -81,7 +83,9 @@
               <i class="fas fa-envelope footer-icon gmail-color"></i>
               <p>mateoasencio99@gmail.com</p></a
             >
-            <a class="btn btn-gmail w-100 mb-3" href="mailto:mateoasencio99@gmail.com"
+            <a
+              class="btn btn-gmail w-100 mb-3"
+              href="mailto:mateoasencio99@gmail.com"
               >CONTACTAR POR EMAIL</a
             >
           </div>
