--- a/html/estudios.html
+++ b/html/estudios.html
@@ -48,16 +48,14 @@
       <hr />
       <div class="row m-1 mb-4 card-shadow">
         <div class="col-md-3 my-4 text-center">
-          <img
-            src="../img/utn-logo.jpeg"
-            class="img-fluid card-image"
-          />
+          <img src="../img/utn-logo.jpeg" class="img-fluid card-image" />
         </div>
         <div class="col-md-9 my-4 text-center">
           <h3>UTN San Francisco</h3>
           <h6>MARZO 2021 - ACTUALIDAD</h6>
           <p>
-            Estudiando la carrera de grado de ingenieria en sistemas de información.
+            Estudiando la carrera de grado de ingenieria en sistemas de
+            información.
           </p>
         </div>
       </div>
@@ -72,7 +70,8 @@
           <h3>Open Bootcamp</h3>
           <h6>ENERO 2022 - JUNIO 2022</h6>
           <p>
-            Cursos completados de HTML, CSS, Javascript, C#, .NET, GIT, SQL, ReactJS, entre otros.
+            Cursos completados de HTML, CSS, Javascript, C#, .NET, GIT, SQL,
+            ReactJS, entre otros.
           </p>
         </div>
       </div>
