--- a/html/experiencia.html
+++ b/html/experiencia.html
@@ -97,10 +97,7 @@
       </div>
       <div class="row m-1 card-shadow">
         <div class="col-md-3 my-4 text-center">
-          <img
-            src="../img/ingertec-logo.jpeg"
-            class="img-fluid card-image"
-          />
+          <img src="../img/ingertec-logo.jpeg" class="img-fluid card-image" />
         </div>
         <div class="col-md-9 my-4 text-center">
           <h3>INGERTEC ARGENTINA</h3>
