--- a/html/proyectos.html
+++ b/html/proyectos.html
@@ -85,9 +85,7 @@
         <div class="col-md-4 text-center my-2">
           <div class="p-2 card-shadow">
             <h3>ReactJS</h3>
-            <a
-              href="https://asencio-store.netlify.app/"
-              target="_blank"
+            <a href="https://asencio-store.netlify.app/" target="_blank"
               ><h5>Ir al sitio</h5></a
             >
             <img src="../img/asencio-store.jpg" class="img-fluid" />
@@ -96,9 +94,7 @@
         <div class="col-md-4 text-center my-2">
           <div class="p-2 card-shadow">
             <h3>ReactJS</h3>
-            <a
-              href="https://asenciofood.netlify.app/"
-              target="_blank"
+            <a href="https://asenciofood.netlify.app/" target="_blank"
               ><h5>Ir al sitio</h5></a
             >
             <img src="../img/food.jpg" class="img-fluid" />
@@ -107,9 +103,7 @@
         <div class="col-md-4 text-center my-2">
           <div class="p-2 card-shadow">
             <h3>ReactJS / Firebase</h3>
-            <a
-              href="https://asencio-ecommerce.netlify.app/"
-              target="_blank"
+            <a href="https://asencio-ecommerce.netlify.app/" target="_blank"
               ><h5>Ir al sitio</h5></a
             >
             <img src="../img/ecommerce.jpg" class="img-fluid" />
