--- a/index.html
+++ b/index.html
@@ -86,9 +86,7 @@
               href="https://www.instagram.com/asenciomateosoftware?igsh=MWZnZ3Q3ajNnZWxkcA%3D%3D&utm_source=q"
               >CONTACTAR POR INSTAGRAM</a
             >
-            <a
-              class="btn btn-gmail mt-2"
-              href="mailto:mateoasencio99@gmail.com"
+            <a class="btn btn-gmail mt-2" href="mailto:mateoasencio99@gmail.com"
               >CONTACTAR POR EMAIL</a
             >
             <a
