--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
         </div>
       </div>
     </nav>
-    <div class="container-fluid background-primary-color py-5">
+    <div class="container-fluid background-primary-color pb-5">
       <div class="row">
-        <div class="col-md-4 text-center">
+        <div class="col-md-4 pt-4 text-center">
           <img src="img/profile.jpeg" class="img-fluid profile-image" />
         </div>
-        <div class="col-md-8">
+        <div class="col-md-8 pt-4">
           <div class="row">
             <div class="col-12 text-center">
               <h1><strong>MATEO ASENCIO</strong></h1>
