--- a/html/experiencia.html
+++ b/html/experiencia.html
@@ -61,7 +61,7 @@
             mantenimiento y mejoras del sistema web de la firma de martilleros
             públicos PaneroSclerandi. Este consta de una parte de presentación
             accesible para todos, una parte de remates virtuales, accesible solo
-            para usuarios registrados y habilitados y una parte de
+            para usuarios registrados y habilitados, y además, una parte de
             configuraciones accesible solo para los martilleros. <br />Mas
             información en
             <a
