--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="assets/fontawesome/css/all.min.css" />
   </head>
   <body>
-    <nav class="navbar navbar-dark shadow-sm navbar-expand-md navbar-light">
+    <nav
+      class="navbar navbar-dark background-dark shadow-sm navbar-expand-md navbar-light"
+    >
       <button
         class="navbar-toggler ms-2"
         type="button"
@@ -40,6 +42,12 @@
           >
         </div>
       </div>
+      <a
+        onclick="changeTheme()"
+        id="themeButton"
+        class="nav-item nav-link ms-2 p-3 change-theme-btn"
+        >Cambiar tema <i class="fa-solid fa-moon" id="themeIcon"></i
+      ></a>
     </nav>
     <div class="container-fluid background-primary-color pb-5">
       <div class="row">
@@ -137,6 +145,8 @@
       </div>
     </footer>
   </body>
+
+  <script src="js/main.js" defer></script>
   <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/fontawesome/js/all.js"></script>
 </html>
